--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.java-gearman-service-0.6.6.jar=/home/datbt/Desktop/thriftlib/java-gearman-service-0.6.6/java-gearman-service-0.6.6.jar
+file.reference.slf4j-api-1.6.4.jar=/home/datbt/Desktop/thriftlib/java-gearman-service-0.6.6/lib/slf4j-api-1.6.4.jar
+file.reference.slf4j-simple-1.6.4.jar=/home/datbt/Desktop/thriftlib/java-gearman-service-0.6.6/lib/slf4j-simple-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.java-gearman-service-0.6.6.jar}
+    ${file.reference.java-gearman-service-0.6.6.jar}:\
+    ${file.reference.slf4j-api-1.6.4.jar}:\
+    ${file.reference.slf4j-simple-1.6.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=zalogging.ZALoggingWorker
+main.class=com.za.logging.ZARouting
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
